# gemigrator

./: .gitignore  README.md  config.py  dependency_verifier.py  llm_interaction.py  logging_config.py  main.py  project_scanner.py  prompts.py  pyproject.toml
migrated/: migration_analysis_notes.md
migrated/src/main/java/com/migratedapp/component/: MemberListProducer.java
migrated/src/main/java/com/migratedapp/config/: RestBasePathConfiguration.java
migrated/src/main/java/com/migratedapp/controller/: MemberController.java
migrated/src/main/java/com/migratedapp/model/: Member.java
migrated/src/main/java/com/migratedapp/repository/: MemberRepository.java
migrated/src/main/java/com/migratedapp/service/: MemberRegistration.java
migrated/src/main/java/com/migratedapp/util/: Resources.java
migrated/src/main/resources/: application.yml
